# dival-url-capture

./: DivaDance Existing Client Login links - Sheet1 (1).csv  DivaDance Existing Client Login links - Sheet1 (1).csv.numbers  README.md  capture_urls.py  pyproject.toml  updated_output.csv
logs/: DivaDance Existing Client Login links - Sheet1 (1).csv.numbers
